unpackaged/main/default/objects/Case/fields/AL_Primary__c.field-meta.xml
<CustomField>
    <fullName>AL_Primary__c</fullName>
    <label>AL Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acid Job</fullName>
            </value>
            <value>
                <fullName>Blowdown</fullName>
            </value>
            <value>
                <fullName>Fluid Level Shot</fullName>
            </value>
            <value>
                <fullName>FWT</fullName>
            </value>
            <value>
                <fullName>Gaslift</fullName>
            </value>
            <value>
                <fullName>Hot Water Treatment</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Line Locate</fullName>
            </value>
            <value>
                <fullName>LOAD</fullName>
            </value>
            <value>
                <fullName>Plunger Service</fullName>
            </value>
            <value>
                <fullName>Pumping Unit</fullName>
            </value>
            <value>
                <fullName>Swabbing</fullName>
            </value>
            <value>
                <fullName>Wireline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>