unpackaged/main/default/objects/Case/fields/Asset_Search_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Search_Type__c</fullName>
    <label>Asset Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Well</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>