unpackaged/main/default/objects/Case/fields/Asset_Tier__c.field-meta.xml
<CustomField>
    <fullName>Asset_Tier__c</fullName>
    <label>Asset Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>