unpackaged/main/default/objects/Case/fields/External_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>External Case Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>