unpackaged/main/default/objects/Case/fields/External_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Created_Date__c</fullName>
    <label>External Created Date</label>
    <type>Date</type>
</CustomField>