unpackaged/main/default/objects/Case/fields/Group_Department__c.field-meta.xml
<CustomField>
    <fullName>Group_Department__c</fullName>
    <description>Group / Department the case belongs to</description>
    <label>Group/ Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Artificial Lift</fullName>
                <default>true</default>
                <label>Artificial Lift</label>
            </value>
            <value>
                <fullName>Maintenance I&amp;E</fullName>
            </value>
            <value>
                <fullName>Maintenance Mechanic</fullName>
            </value>
            <value>
                <fullName>Maintenance Other</fullName>
            </value>
            <value>
                <fullName>Measurement Issue</fullName>
            </value>
            <value>
                <fullName>Operations Recovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>