unpackaged/main/default/objects/Case/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>&quot;Gaslift&quot;</defaultValue>
    <label>Primary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blowdown</fullName>
            </value>
            <value>
                <fullName>Fluid Level Shot</fullName>
            </value>
            <value>
                <fullName>FWT</fullName>
            </value>
            <value>
                <fullName>Gaslift</fullName>
            </value>
            <value>
                <fullName>Hot Water Treatment</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>LOAD</fullName>
            </value>
            <value>
                <fullName>Measurement Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plunger Service</fullName>
            </value>
            <value>
                <fullName>Swabbing Wireline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>