unpackaged/main/default/objects/Case/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <label>Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secondary</valueSetName>
    </valueSet>
</CustomField>