unpackaged/main/default/objects/Case/fields/Work_Order_Cost_Estimate_Totals__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Cost_Estimate_Totals__c</fullName>
    <label>Work Order Cost Estimate Totals</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>