unpackaged/main/default/objects/Case/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>