unpackaged/main/default/objects/Case/listViews/Artificial_Lift_Case_View.listView-meta.xml
<ListView>
    <fullName>Artificial_Lift_Case_View</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ASSET.NAME</columns>
    <columns>External_Case_Number__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Work_Order_Cost_Estimate_Totals__c</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.STATUS</columns>
    <columns>Work_Order_Cost_Line_Item_Totals__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Department__c</field>
        <operation>equals</operation>
        <value>Artificial Lift</value>
    </filters>
    <label>Artificial Lift Case View</label>
</ListView>