unpackaged/main/default/objects/Case/listViews/Maintenance_Case_View.listView-meta.xml
<ListView>
    <fullName>Maintenance_Case_View</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Group_Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Department__c</field>
        <operation>equals</operation>
        <value>Maintenance I&amp;E,Maintenance Mechanic,Maintenance Other</value>
    </filters>
    <label>Maintenance Case View</label>
</ListView>