unpackaged/main/default/objects/Case/listViews/Measurement_Issue_Cases.listView-meta.xml
<ListView>
    <fullName>Measurement_Issue_Cases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ASSET.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Department__c</field>
        <operation>equals</operation>
        <value>Measurement Issue</value>
    </filters>
    <label>Measurement Issue Cases</label>
</ListView>